--- a/Slides/Lesson-04.html
+++ b/Slides/Lesson-04.html
@@ -41,7 +41,7 @@ You've written lots of code so far you've probably incurred some [technical debt
 
 The goal of [refactoring code](https://en.wikipedia.org/wiki/Code_refactoring) in short is to improve your existing code base and put it into a shape that will accept future updates. 
 </script></section><section  data-markdown><script type="text/template">
-Refactoring is not about adding new features. Instead, we want to have the **same functionality** with an **improved codebase** underneath it. 
+Refactoring is not about adding new features. Instead, you want to have the **same functionality** with an **improved codebase** underneath it. 
 </script></section><section  data-markdown><script type="text/template">
 ## Creating classes
 
@@ -53,15 +53,17 @@ You need to make this game **Object Oriented**.
 </script></section><section  data-markdown><script type="text/template">
 You need to make a class for each of the game objects.
 
-- Ball
-- Brick
-- Paddle
-- Score
-- Lives
+- **Ball**
+- **Brick**
+- **Paddle**
+- **Score**
+- **Lives**
 </script></section><section  data-markdown><script type="text/template">
-These are objects in the game, you can see these objects on the screen and the game manipulates these objects as you play the game. Objects give you an abstract way to think about and visualize your code. 
+Objects give you an **abstract way to think about and visualize your code**. 
 </script></section><section  data-markdown><script type="text/template">
-You'll be making a Class for each of these. Each should hold the variables that describe or control that object as properties within the class.
+You'll be making a **Class for each** of these. 
+
+Define properties in each class with the values that the object needs to do it's job. 
 </script></section><section  data-markdown><script type="text/template">
 For example, the Ball class might look like this: 
 
