--- a/Slides/Lesson-05.html
+++ b/Slides/Lesson-05.html
@@ -26,7 +26,7 @@
 </script></section><section  data-markdown><script type="text/template">
 # Overview
 
-This class will be an OOP workshop to review the concepts from the previous class.
+This class will be an OOP workshop to review the concepts from the previous class and expand your understanding of OOP to include inheritence.
 </script></section><section  data-markdown><script type="text/template">
 ### Why work with Classes and inheritance?
 
@@ -40,70 +40,66 @@ This is a big topic which reaches deeply into important areas of computer scienc
 </script></section><section  data-markdown><script type="text/template">
 # Inheritance 
 
-Inheritance is when you get something from your ancestors. 
+Inheritance is when you get something from your ancestors. By definition it's the act of passing property from an ancestor to a descendant. Properties can be: 
 
 - genes
 - money
 - property
-
+</script></section><section  data-markdown><script type="text/template">
 In software this could be: 
 
 - variables/properties
 - methods/functions
-
+</script></section><section  data-markdown><script type="text/template">
 Who do you inherit from? 
 
 - Your parents
 - Your grandparents
-
+</script></section><section  data-markdown><script type="text/template">
 In software who do you inherit from?
 
 - Your parent/superclass
-
+</script></section><section  data-markdown><script type="text/template">
 ## Inheritence with JS
 
 Any class can inherit from another. You can also think of classes that inherit from another class as extensions of the other class. 
 
 ```js
 class Sprite {
- constructor() {
- this.x = 0
- this.y = 0
- }
+  constructor() {
+    this.x = 0
+    this.y = 0
+  }
 }
-
 class Ball extends Sprite {
- constructor() {
- super()
-
- this.radius = 10
- }
+  constructor() {
+    super()
+    this.radius = 10
+  }
 }
-
 const ball = new Ball() // { x: 0, y: 0, radius: 10 }
 ```
+</script></section><section  data-markdown><script type="text/template">
+Calling `super()` in a subclass is like calling the constructor function in your superclass. 
 
-Calling super() in a subclass is like calling the constructor function in your superclass. 
-
-** You must call super()!**
-
-If a class takes parameters in its constructor it must pass these to super. 
+** You must call `super()`!**
+</script></section><section  data-markdown><script type="text/template">
+If a class takes parameters in its constructor it **must pass these to super**. 
 
 ```js
 class Sprite {
- constructor(x, y) {
- this.x = 0
- this.y = 0
- }
+  constructor(x, y) {
+    this.x = 0
+    this.y = 0
+  }
 }
 
 class Ball extends Sprite {
- constructor(x, y, color, radius) {
- super(x, y) // Must pass parameters to super!
-
- this.color = color
- this.radius = radius
- }
+  constructor(x, y, color, radius) {
+    super(x, y) // Must pass parameters to super!
+    this.color = color
+    this.radius = radius
+  }
 }
 
 const ball = new Ball(10, 20, 'red', 30) 
@@ -111,33 +107,94 @@ const ball = new Ball(10, 20, 'red', 30)
 ```
 
 You must pass parameters to super. Notice the constructor takes these parameters, calling super is like calling the constructor of the superclass. 
-</script></section><section ><section data-markdown><script type="text/template">
-# Using Inheritance
+</script></section><section  data-markdown><script type="text/template">
+# Inheritance Challenges
 
-Pair with some at the same stage/level and work on the stretch challenges together.
-</script></section><section data-markdown><script type="text/template">
+**Challenge 1**: many of the classes you created for Break Out share some of the sample properties. Moving these to a super class would keep them in one locaiton that could be shared, edited, and make it easier to reason about. This would make your code DRY. 
+
+All of these classes: 
+
+- `Ball`
+- `Paddle`
+- `Brick`
+- `Lives`
+- `Score` 
+
+Share these properties: 
+
+- `x`
+- `y`
+
+While they may not all use it these could all also share this method: 
+
+- `move()`
+
+Your goal with this challenge is to define a base class, let's call it Sprite. 
+
+Here is some starter code: 
+
+```js
+class Sprite {
+  constructor(x, y) {
+    this.x = 0
+    this.y = 0
+  }
+}
+
+class Ball extends Sprite {
+  constructor(x, y, color, radius) {
+    super(x, y) // Must pass parameters to super!
+    this.color = color
+    this.radius = radius
+  }
+}
+```
+
+You may have to modify this to include other properties your classes might support. In this code sample the `Sprite` class supports the `x` and `y` properties and the `Ball` class takes `x`, `y`, `color`, and `radius`.
+
+Notice that Ball passes `x` and `y` through `super(x, y)` to it's super classes `Sprite`. 
+
+All of these classes should extend the new `Sprite` class. 
+
+- `Ball`
+- `Paddle`
+- `Brick`
+- `Lives`
+- `Score`
+
+**Challenge 2**: Some of the classes draw themselves with the same code. 
+
+- `Paddle`
+- `Brick`
+
+Both of these classes draw as Rectangles willed with a color. You can give the `Sprite` class a `render(ctx)` method. 
+
+Doing this will allow any class that extends `Sprite` to use `render()` this method. 
+
+Classes that draw themselves differently:
+
+- `Ball`
+- `Lives`
+- `Score`
+
+Will define their own `render()` which will override the render method defined in Sprite.
+</script></section><section  data-markdown><script type="text/template">
 <!-- .slide: data-background="#087CB8" -->
 ## BREAK
 
 Take a 10-minute break and think about things in the world that share properties. 
-</script></section></section><section ><section data-markdown><script type="text/template">
-# Workshop Problem Solving
-
-
-</script></section><section data-markdown><script type="text/template">
-## Overview/TT II (optional) (20 min)
-</script></section><section data-markdown><script type="text/template">
-## In-Class Activity II (optional) (30 min)
-</script></section></section><section  data-markdown><script type="text/template">
+</script></section><section  data-markdown><script type="text/template">
 ## Wrap Up
 
-- Continue working on your current tutorial
-- Complete reading
-- Complete challenges
+- Review Inheritence
+</script></section><section  data-markdown><script type="text/template">
+## After Class 
+
+- [Assignment 4 Inheritence](../Assignments/Assignment-4-Inheritance.md)
 </script></section><section  data-markdown><script type="text/template">
 ## Additional Resources
 
-1. Links to additional readings and videos
+1. https://javascript.info/classes
 </script></section><section  data-markdown><script type="text/template">
 ## Minute-by-Minute [OPTIONAL]
 
@@ -148,7 +205,7 @@ Take a 10-minute break and think about things in the world that share properties
 | 0:20 | 0:05 | [Learning Objectives](#learning-objectives) |
 | 0:50 | 0:30 | [Inheritence](#inheritence) |
 | 1:00 | 0:10 | [BREAK](#break) |
-| 2:25 | 1:30 | [Workshop problem solving](#workshop-problem-solving) |
+| 2:25 | 1:30 | Lab |
 | 2:45 | 0:20 | [Wrap up](#wrap-up) |
 
 </script></section></div>
