--- a/Slides/Lesson-08.html
+++ b/Slides/Lesson-08.html
@@ -18,7 +18,7 @@
   <body>
     <div class="reveal">
       <div class="slides"><section  data-markdown><script type="text/template"><!-- .slide: data-background="./Images/header.svg" data-background-repeat="none" data-background-size="40% 40%" data-background-position="center 10%" class="header" -->
-# FEW 1.2 - Lesson 8 - Single Page Applications Part 2
+# FEW 1.2 - Lesson 8 - Component Architecture
 
 <!-- Put a link to the slides so that students can find them -->
 
