--- a/Slides/Lesson-06.html
+++ b/Slides/Lesson-06.html
@@ -26,91 +26,97 @@
 </script></section><section  data-markdown><script type="text/template">
 # Overview
 
-Bundling is a common practice used across the JS ecosystem. While JS is not compiled to source code like other languages, JS files are processed heavily in modern applications. 
+Bundling is a common practice used across the JS ecosystem. While JS is not compiled to machine code like other languages, JS files are processed heavily in modern applications. 
 </script></section><section  data-markdown><script type="text/template">
 ## Why learn bundling
 
 - It's a professional best practice
-- Expect this to be used in any software job using JS
+- Expect this to be used in a software job
 - Make more reliable apps
-- Make more widely compatible applications
-
+- Make compatible applications
+</script></section><section  data-markdown><script type="text/template">
 ## Learning Objectives
 
 1. Describe bundling
-1. Identify the advantages of bundling code
-1. Implement a bundling system
+1. Describe the raison d'etre of bundling
+1. Implement bundling system with webpack
 </script></section><section  data-markdown><script type="text/template">
 # Bundling and compiling JS
 
 Has anyone used bundling or JS compiler before? 
 
 What did it do? 
-
+</script></section><section  data-markdown><script type="text/template">
 ## Bundling JS
 
 Modern JS applications are not just written in code and used. At the professional level, they are compiled/bundled. 
-
+</script></section><section  data-markdown><script type="text/template">
 JavaScript is a scripting language. This means it doesn't need to be compiled in a strict sense, processed and turned into machine code. 
-
+</script></section><section  data-markdown><script type="text/template">
 While it doesn't need to be turned into machine code we can still do work to make our code more reliable and compatible with the widest array of browsers. 
-
+</script></section><section  data-markdown><script type="text/template">
 A bundler is a tool that converts the source JS that you wrote into code that will be used in your published application/web site. 
 </script></section><section  data-markdown><script type="text/template">
-What does bundling do? Processes your sources file and produces new files. What kinds of processes? 
+What does bundling do? 
+</script></section><section  data-markdown><script type="text/template">
+Bundling processes your sources file and produces new files.
+</script></section><section  data-markdown><script type="text/template">
+**What types of processing?**
 
-- minify - reduces file size by removing unnecessary characters
-- uglify - renames elements to obfuscate code and reduce file size again
-- Compile TypeScript - Converts .ts files into .js files
-- Compatibility - Convert ES6 JS into JS that compatible with older browsers
-- bundling - combining all .js files into a single bundle.js
-
+- **minify** - reduces file size by removing unnecessary characters
+- **uglify** - renames elements to obfuscate code and reduce file size again
+- **Compile TypeScript** - Converts .ts files into .js files
+- **Compatibility** - Convert ES6 JS into JS that is compatible with older browsers
+- **bundling** - combining all .js files into a single bundle.js file
+</script></section><section  data-markdown><script type="text/template">
 Try it out:
 
-https://javascript-minifier.com
-https://skalman.github.io/UglifyJS-online/
-https://blog.logrocket.com/uglify-vs-babel-minify-vs-terser-a-mini-battle-royale/
+Minify: https://javascript-minifier.com
 
-Paste some code here and see what the output is. 
-
-Expect to use bundlers on any professional project or in a professional environment. 
+Uglify: https://skalman.github.io/UglifyJS-online/
+</script></section><section  data-markdown><script type="text/template">
+Read more about these: https://blog.logrocket.com/uglify-vs-babel-minify-vs-terser-a-mini-battle-royale/
 </script></section><section  data-markdown><script type="text/template">
 ## Why call it bundling? 
-
+</script></section><section  data-markdown><script type="text/template">
 Another effect of the bundler is that it combines multiple .js files into a single .js file. This provides an advantage when loading projects by reducing the number of streams your page requires to load itself. 
-
+</script></section><section  data-markdown><script type="text/template">
 Each file is a separate stream. A browser has to provide overhead and manage each stream. More streams require more work, memory, and CPU. 
-
-In the end, bundling is the process of processing and combining files into a single file, often called bundle.js. This bundle.js is the "compiled" application. 
-
+</script></section><section  data-markdown><script type="text/template">
+In the end, bundling is the process of processing and combining files into a single file, often called bundle.js. This bundle.js is your "compiled" application. 
+</script></section><section  data-markdown><script type="text/template">
 ## Libraries and npm 
+</script></section><section  data-markdown><script type="text/template">
+Have you used npm before?
 
+How did you use it? 
+
+What did it do?
+</script></section><section  data-markdown><script type="text/template">
 The bundling process will require npm. Let's take a look at npm. 
-
-You've probably used npm before but have you ever thought about what npm is? Here is how npm describes itself: 
-
+</script></section><section  data-markdown><script type="text/template">
+You've probably used npm before but have you ever thought about what npm is? Here is how npm describes itself. 
+</script></section><section  data-markdown><script type="text/template">
 > npm is the world’s largest software registry. Open-source developers from every continent use npm to share and borrow packages and many organizations use npm to manage private development as well.
 </script></section><section  data-markdown><script type="text/template">
 npm consists of three distinct components:
 
-- the website
-- the Command Line Interface (CLI)
-- the registry
-
-<!-- > --> 
-
-npm stores packages in a registry. Packages are programs, snippets of code. 
-
-npm is a library of code, a web site and a command-line tool that allows you to "check out" packages for use in your projects. 
+- website
+- Command Line Interface (CLI)
+- package registry
+</script></section><section  data-markdown><script type="text/template">
+npm stores packages in a registry. Packages are programs (snippets of code).
+</script></section><section  data-markdown><script type="text/template">
+npm is a code library, a web site and a command-line tool that allows you to "check out" packages for use in your projects. 
 </script></section><section  data-markdown><script type="text/template">
 # How to bundle code
-
+</script></section><section  data-markdown><script type="text/template">
 You should all have npm installed. If not follow their guide here: https://docs.npmjs.com/about-npm-versions
-
+</script></section><section  data-markdown><script type="text/template">
 Create a new npm project in your Break Out directory. 
 
 `npm init -y`
-
+</script></section><section  data-markdown><script type="text/template">
 Install webpack. This is a bundler. It's the tool that will do the processing and bundling. 
 
 `npm install --save-dev webpack webpack-cli`
@@ -118,41 +124,40 @@ Install webpack. This is a bundler. It's the tool that will do the processing an
 ## Setup directory 
 
 Setup some directories to manage your files. 
-
+</script></section><section  data-markdown><script type="text/template">
 Make the following folders: 
 
-- src (holds your source code)
+- src (contains the code you write)
 - dist (holds code you will distribute)
-
-
+</script></section><section  data-markdown><script type="text/template">
 Arrange your files. You should already have some of the files. 
 
 - src/index.js (this is your source code for your break out game)
 - dist/index.html (this is the HTML file for your break out game)
 - package.json (this should have been created in the previous step)
 - webpack.config.json (make this file now you will add code to it later)
-
+</script></section><section  data-markdown><script type="text/template">
 In the end your directory will look like this:
 
 ```
 |- package.json
 |- webpack.config.js
 |- /src
- |- index.js
+  |- index.js
 |- /dist
- |- index.html
+  |- index.html
 ```
-
+</script></section><section  data-markdown><script type="text/template">
 With this new arrangement, your index.html will now need to load bundle.js. Find the script tag and point it to the bundle.js. 
 
 `<script src="bundle.js">__SCRIPT_END__`
-
+</script></section><section  data-markdown><script type="text/template">
 Notice we haven't created bundle.js. This file will be created in the next step by webpack. This will be the compiled, minified, uglified file built from your JS code and code you might have imported from other libs. 
-
+</script></section><section  data-markdown><script type="text/template">
 ## Webpack config 
-
+</script></section><section  data-markdown><script type="text/template">
 Webpack is an industry-standard tool. You will see this tool in the future expects to work with it. It does many things. The webpack.config.js file configures webpack, it is written in JavaScript. 
-
+</script></section><section  data-markdown><script type="text/template">
 Copy the code below and paste it into your webpack.config.js. 
 
 ```
@@ -166,18 +171,18 @@ module.exports = {
  }
 }
 ```
-
+</script></section><section  data-markdown><script type="text/template">
 Examine the config file discuss it with another student. What do you think it will tell webpack to do? 
 </script></section><section  data-markdown><script type="text/template">
 - entry - start with src/index.js
 - output 
  - filename - create a file named bundle.js
  - path - put bundle.js in the dist/ folder 
-</script></section><section ><section data-markdown><script type="text/template">
+</script></section><section  data-markdown><script type="text/template">
 ## Running Scripts
 
 You can run scripts from the command line. You did this earlier when you installed the npm packages. You can also store scripts in your package.json and run them with your project. 
-
+</script></section><section  data-markdown><script type="text/template">
 Open packages.json and find the scripts section. 
 
 edit package.json
@@ -193,44 +198,58 @@ edit package.json
  ...
 }
  ```
-
+</script></section><section  data-markdown><script type="text/template">
 Here you are adding two scripts
 
 - "develop": "webpack --mode development --watch"
 - "build": "webpack --mode production"
-
+</script></section><section  data-markdown><script type="text/template">
 The first is for development mode. Use this one when you are working on your project as a developer. 
-
+</script></section><section  data-markdown><script type="text/template">
 The second is the build script. Use this when you want to create the bundle.js and distribute your project to the world. 
-</script></section><section data-markdown><script type="text/template">
+</script></section><section  data-markdown><script type="text/template">
 ### Run your scripts
 
 Test your work. 
+</script></section><section  data-markdown><script type="text/template">
+Bundle your project in development mode: 
 
 `npm run develop`
-
+</script></section><section  data-markdown><script type="text/template">
 Running this script should launch Webpack in development mode. It should compile your .js files and create dist.bundle.js. 
-
+</script></section><section  data-markdown><script type="text/template">
 This mode uses the--watch flag. The watch flag monitors file changes you make and recompiles each time there is a change.
-
+</script></section><section  data-markdown><script type="text/template">
 Try it make some changes, save. Notice the terminal shows output each time you save. Telling us that webpack is working recompiling bundle.js. 
-</script></section></section><section  data-markdown><script type="text/template">
+</script></section><section  data-markdown><script type="text/template">
+Take a look at the distribution code in bundle.js. It is human readable, even if it isn't what you would have written. Note the file size of this file. For me it was 19k.
+</script></section><section  data-markdown><script type="text/template">
+Try production mode. 
+
+`npm run build`
+</script></section><section  data-markdown><script type="text/template">
+This script doesn't use the --watch flag
+
+`"build": "webpack --mode production"`
+</script></section><section  data-markdown><script type="text/template">
+Running it once builds your code for production. This should be your last step before distributing your work to the world. 
+</script></section><section  data-markdown><script type="text/template">
+Take a look at the distribution code in bundle.js. What happened? The code here has been minified and uglified. Check the file size. For me it was 5k. 
+
 <!-- .slide: data-background="#087CB8" -->
 # BREAK
 
 Take a 10-minute break
-</script></section><section ><section data-markdown><script type="text/template">
+</script></section><section  data-markdown><script type="text/template">
 # Lab
 
-Use this lab time to: 
+Use the lab time to complete your project. 
 
-- Install webpack and get the bundler working
-- Finish up your Break Project
-- Write a quality readme describing what happened in the project 
- - Be sure to explain where you began and where you ended 
- - Explain the tools used
- - Include mention of the branches that contain the work in different stages
-</script></section><section data-markdown><script type="text/template">
+- Solve any final errors
+- Write a readme
+- Publish your work to GitHub Pages
+- Post a link to the Project tab in the Progress Tracker
+</script></section><section  data-markdown><script type="text/template">
 # Wrap Up and review
 
 - What is bundling? 
@@ -239,7 +258,7 @@ Use this lab time to:
 - Use cases? 
 - What problems did you encounter? 
 - How did you solve them?
-</script></section></section><section  data-markdown><script type="text/template">
+</script></section><section  data-markdown><script type="text/template">
 ## Additional Resources
 
 - https://javascript-minifier.com
