--- a/Slides/Lesson-09.html
+++ b/Slides/Lesson-09.html
@@ -18,67 +18,42 @@
   <body>
     <div class="reveal">
       <div class="slides"><section  data-markdown><script type="text/template"><!-- .slide: data-background="./Images/header.svg" data-background-repeat="none" data-background-size="40% 40%" data-background-position="center 10%" class="header" -->
-# FEW 1.2 - Lesson 9 - lesson topic
+# FEW 1.2 - Lesson 9 - Styling Components
 
 <!-- Put a link to the slides so that students can find them -->
 
 ➡️ [**Slides**](/Syllabus-Template/Slides/Lesson1.html ':ignore')
 </script></section><section  data-markdown><script type="text/template">
-## Why you should know this or industry application (optional) (5 min)
+## Why you should know this?
 
-Explain why students should care to learn the material presented in this class.
+Components can be styled with CSS. The component architecture and virtual DOM mean styles need to be handled a little differently with React projects.
 </script></section><section  data-markdown><script type="text/template">
 ## Learning Objectives (5 min)
 
-1. Identify and describe
-1. Define
-1. Design
-1. Implement
+1. Use CSS with React
+1. Organize CSS with Components 
+1. Describe BEM (Block Element Modifer) naming
+1. Use BEM
 </script></section><section  data-markdown><script type="text/template">
-## Initial Exercise (15 min)
+## Styling Comoponents
 
-- Funny comic
-- Prime the Pump (e.g. think and jot, think pair share, etc)
-- Productivity Tip/Tool
-- Review of current event (e.g. tech news relevant to your track/topic)
-- Quiz on homework or topic(s) of past class
-- Concept Test
-</script></section><section ><section data-markdown><script type="text/template">
-# Topic 1
-</script></section><section data-markdown><script type="text/template">
-## Overview/TT I (20 min)
+https://reactjs.org/docs/faq-styling.html
 
-- Why learn this?
-- Industry examples of usage
-- Best practices
-- Personal anecdote
+**Inline styles**
 
-<aside class="notes">
-Place more detailed information or speaker notes in "aside" elements - it will appear in GitHub Pages but not in the slides.
-</aside>
-</script></section><section data-markdown><script type="text/template">
-## In Class Activity I (30 min)
+**CSS In JS**
 
-- I do, We do, You do
-- Reading & Discussion Questions in small groups
-- Draw a picture/diagram
-- Complete Challenges solo or in pair
-- Q&A about tutorials
-- Pair up and code review
-- Pair program
-- Formative assessment
-- Form into groups
-- etc (get creative :D)
-</script></section></section><section  data-markdown><script type="text/template">
+**Style Sheets**
+</script></section><section  data-markdown><script type="text/template">
+# Lab
+
+Use this Lab period to style your React final project
+</script></section><section  data-markdown><script type="text/template">
 <!-- .slide: data-background="#087CB8" -->
 ## [**10m**] BREAK
-</script></section><section ><section data-markdown><script type="text/template">
-# Topic 2
-</script></section><section data-markdown><script type="text/template">
-## Overview/TT II (optional) (20 min)
-</script></section><section data-markdown><script type="text/template">
-## In Class Activity II (optional) (30 min)
-</script></section></section><section  data-markdown><script type="text/template">
+</script></section><section  data-markdown><script type="text/template">
+
+</script></section><section  data-markdown><script type="text/template">
 ## Wrap Up (5 min)
 
 - Continue working on your current tutorial
