--- a/Slides/Lesson-10.html
+++ b/Slides/Lesson-10.html
@@ -18,76 +18,58 @@
   <body>
     <div class="reveal">
       <div class="slides"><section  data-markdown><script type="text/template"><!-- .slide: data-background="./Images/header.svg" data-background-repeat="none" data-background-size="40% 40%" data-background-position="center 10%" class="header" -->
-# FEW 1.2 - Lesson 10 - lesson topic
+# FEW 1.2 - Lesson 10 - Using Dynamic Data
 
 <!-- Put a link to the slides so that students can find them -->
 
 ➡️ [**Slides**](/Syllabus-Template/Slides/Lesson1.html ':ignore')
 </script></section><section  data-markdown><script type="text/template">
-## Why you should know this or industry application (optional) (5 min)
+## Why you should know this?
 
-Explain why students should care to learn the material presented in this class.
+Static websites are a thing of the past web sites these days are changing and providing new content all the time. Your sites should do the same. 
+
+Even if the content is fixed handling the content programmatically provides greater flexibility. 
 </script></section><section  data-markdown><script type="text/template">
-## Learning Objectives (5 min)
+## Learning Objectives
 
-1. Identify and describe
-1. Define
-1. Design
-1. Implement
+1. Using Array.map()
+1. Describe Array.map()
+1. Using Component collections
+1. Using Keys
 </script></section><section  data-markdown><script type="text/template">
-## Initial Exercise (15 min)
+## Transforming Arrays
 
-- Funny comic
-- Prime the Pump (e.g. think and jot, think pair share, etc)
-- Productivity Tip/Tool
-- Review of current event (e.g. tech news relevant to your track/topic)
-- Quiz on homework or topic(s) of past class
-- Concept Test
-</script></section><section ><section data-markdown><script type="text/template">
-# Topic 1
-</script></section><section data-markdown><script type="text/template">
-## Overview/TT I (20 min)
+https://javascript.info/array-methods#transform-an-array
 
-- Why learn this?
-- Industry examples of usage
-- Best practices
-- Personal anecdote
+Read and discuss
+</script></section><section  data-markdown><script type="text/template">
+## Converting Data to components
 
-<aside class="notes">
-Place more detailed information or speaker notes in "aside" elements - it will appear in GitHub Pages but not in the slides.
-</aside>
-</script></section><section data-markdown><script type="text/template">
-## In Class Activity I (30 min)
+Using array.map() to convert data into React Components. 
 
-- I do, We do, You do
-- Reading & Discussion Questions in small groups
-- Draw a picture/diagram
-- Complete Challenges solo or in pair
-- Q&A about tutorials
-- Pair up and code review
-- Pair program
-- Formative assessment
-- Form into groups
-- etc (get creative :D)
-</script></section></section><section  data-markdown><script type="text/template">
+## Rendering Collections 
+
+React automatically renders collections. 
+
+Each element in a collection needs a key. 
+</script></section><section  data-markdown><script type="text/template">
+## Lab
+
+
+Work on your final project. Include dynamic data. Use Keys. 
+</script></section><section  data-markdown><script type="text/template">
 <!-- .slide: data-background="#087CB8" -->
 ## [**10m**] BREAK
-</script></section><section ><section data-markdown><script type="text/template">
-# Topic 2
-</script></section><section data-markdown><script type="text/template">
-## Overview/TT II (optional) (20 min)
-</script></section><section data-markdown><script type="text/template">
-## In Class Activity II (optional) (30 min)
-</script></section></section><section  data-markdown><script type="text/template">
+
+Take a break. 
+</script></section><section  data-markdown><script type="text/template">
 ## Wrap Up (5 min)
 
-- Continue working on your current tutorial
-- Complete reading
-- Complete challenges
+- 
 </script></section><section  data-markdown><script type="text/template">
 ## Additional Resources
 
-1. Links to additional readings and videos
+1. 
 </script></section><section  data-markdown><script type="text/template">
 ## Minute-by-Minute [OPTIONAL]
 
