--- a/Slides/Lesson-11.html
+++ b/Slides/Lesson-11.html
@@ -18,7 +18,7 @@
   <body>
     <div class="reveal">
       <div class="slides"><section  data-markdown><script type="text/template"><!-- .slide: data-background="./Images/header.svg" data-background-repeat="none" data-background-size="40% 40%" data-background-position="center 10%" class="header" -->
-# FEW 1.2 - Lesson 11 - lesson topic
+# FEW 1.2 - Lesson 11 - Review projects
 
 <!-- Put a link to the slides so that students can find them -->
 
@@ -26,14 +26,12 @@
 </script></section><section  data-markdown><script type="text/template">
 ## Why you should know this or industry application (optional) (5 min)
 
-Explain why students should care to learn the material presented in this class.
+Reviewing your work is important to improving it. 
 </script></section><section  data-markdown><script type="text/template">
 ## Learning Objectives (5 min)
 
-1. Identify and describe
-1. Define
-1. Design
-1. Implement
+1. Identify areas for improvement.
+1. 
 </script></section><section  data-markdown><script type="text/template">
 ## Initial Exercise (15 min)
 
