--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <!-- UPDATE: Add description, author, og:site_name, og:title, and og:description text for your course. -->
     <!-- NOTE: Text presented in ALL_CAPS indicate values you should replace. -->
-    <title>Syllabus Template</title>
-    <meta name="description" content="To be used as a template for your course">
-    <meta name="author" content="INSTRUCTOR_NAME (INSTRUCTOR_NAME@makeschool.com)">
-    <meta property="og:site_name" content="Syllabus Template">
-    <meta property="og:title" content="Syllabus Template">
-    <meta property="og:description" content="To be used as a template for your course">
+    <title>FEW 1.2 Foundation JavaScript</title>
+    <meta name="description" content="Make School Foundation JavaScript">
+    <meta name="author" content="Mitchell Hudson (mitchell@makeschool.com)">
+    <meta property="og:site_name" content="FEW 1.2 Foundation JavaScript">
+    <meta property="og:title" content="FEW 1.2 Foundation JavaScript">
+    <meta property="og:description" content="Introduction to modern JavaScript">
     <!-- END CUSTOMIZATION -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -20,27 +20,24 @@
       sizes="50x50">
     <meta name="keywords" content="makeschool">
     <meta property="og:type" content="website">
-    <!-- UPDATE: Make sure to update all REPO_NAME values for your course repo in the following object.-->
     <meta property="og:url" content="https://make-school-courses.github.io/REPO_NAME_HERE">
     <meta property="og:image" content="http://make-school-courses.github.io/REPO_NAME_HERE/Web/logo-icononly.svg">
-    <meta property="og:image:secure_url" content="https://make-school-courses.github.io/REPO_NAME_HERE/Web/logo-icononly.svg">
+    <meta property="og:image:secure_url" content="https://make-school-courses.github.ioREPO_NAME_HERE/Web/logo-icononly.svg">
     <meta property="og:image:type" content="image/svg">
     <meta property="og:image:width" content="250">
     <meta property="og:image:height" content="250">
     <meta property="og:image:alt" content="Make School">
     <link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/vue.css">
-    <link rel="stylesheet" href="Web/style.css">
+    <link rel="stylesheet" href="web/style.css">
   </head>
   <body>
     <div id="app"></div>
-    <!-- UPDATE: Make sure to update NAME, REPO, and NAMESPACE below-->
+    <!-- UPDATE: Make sure to update all REPO_NAME values for your course repo in the following object.-->
     <script>
       window.$docsify = {
         logo: 'Web/logo-icononly.svg',
-        // Update to Course Name
-        name: 'Syllabus Template',
-        // Replace with REPO_NAME
-        repo: 'Make-School-Courses/Syllabus-Template',
+        name: 'BEW 2.5',
+        repo: 'Make-School-Courses/FEW-1.2-JavaScript-Foundations',
         themeColor: '#126893',
         formatUpdated: '{MM}/{DD} {HH}:{mm}',
         executeScript: true,
@@ -63,8 +60,7 @@
           noData: 'No Results!',
           depth: 4,
           hideOtherSidebarContent: false,
-          // Replace with REPO_NAME
-          namespace: 'Syllabus-Template',
+          namespace: 'FEW-1.2-JavaScript-Foundations',
         },
         copyCode: {
           buttonText: '📋 Click to Copy',
@@ -109,7 +105,7 @@
     <script src="//unpkg.com/prismjs/components/prism-yaml.min.js"></script>
     <script>
       if (typeof navigator.serviceWorker !== 'undefined') {
-        navigator.serviceWorker.register('Web/sw.js')
+        navigator.serviceWorker.register('web/sw.js')
       }
     </script>
   </body>
