--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
     <meta property="og:image:alt" content="Make School">
     <link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/vue.css">
     <link rel="stylesheet" href="web/style.css">
+    <style>
+      td::before { display: none }
+    </style>
   </head>
   <body>
     <div id="app"></div>
