--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
     <link rel="stylesheet" href="web/style.css">
     <style>
       td::before { display: none }
+      .app-name-link {
+        display: block;
+      }
     </style>
   </head>
   <body>
@@ -39,7 +42,7 @@
     <script>
       window.$docsify = {
         logo: 'Web/logo-icononly.svg',
-        name: 'BEW 2.5',
+        name: 'FEW 1.2',
         repo: 'Make-School-Courses/FEW-1.2-JavaScript-Foundations',
         themeColor: '#126893',
         formatUpdated: '{MM}/{DD} {HH}:{mm}',
