--- a/Slides/Lesson-06.html
+++ b/Slides/Lesson-06.html
@@ -167,7 +167,7 @@ Arrange your files. You should already have some of the files.
 - src/index.js (Code you wrote)
 - dist/index.html (Code compiled by webpack)
 - package.json
-- webpack.config.json 
+- webpack.config.js
 </script></section><section  data-markdown><script type="text/template">
 In the end your directory will look like this:
 
